# simpsom-dask

./: .gitignore  pyproject.toml  requirements.txt
examples/: test_doublehex.ipynb
simpsom_dask/: __init__.py  plots.py  simpsom.py
src/xpysom_dask/: diagnostics.py  xpysom.py
xpysom_dask/: diagnostics.py  distances.py  neighborhoods.py  plots.py  tests.py  utils.py  xpysom.py
xpysom_dask/.ipynb_checkpoints/: plots-checkpoint.py
