[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xpysom-dask"
version = "1.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "Fork of jcfaracco/xpysom-dask"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/hbanderier/xpysom-dask"
Issues = "https://github.com/hbanderier/xpysom-dask/issues"